nav fix buffer on mobile

--- a/client/styles/less/styles.less
+++ b/client/styles/less/styles.less
@@ -205,6 +205,10 @@ a {
 // - fix to the top
 
 @media (max-width: @screen-xs-max) {
+	.nav-fixed-buffer {
+		display: none;
+	}
+
   .nav-container {
 
 		.nav-container.fixed();
